enum-ptr-tests/tests/fail/struct.stderr
error: EnumPtr only supports enums
 --> tests/fail/struct.rs:6:8
  |
6 | struct Foo<'a, 'b> {
  |        ^^^
